<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/menu_item_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history"/>

        <item
            android:id="@+id/menu_item_analytics"
            android:icon="@drawable/ic_menu_analytics"
            android:title="@string/menu_analytics"/>
        <item
            android:id="@+id/menu_item_company"
            android:icon="@drawable/ic_menu_company"
            android:title="@string/menu_company"/>

        <item
            android:id="@+id/menu_item_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile"/>
    </group>
</menu>