<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_user_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="lk.javainstitute.swiftex.user.home.UserCourierRequestFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_user_home" />
    <fragment
        android:id="@+id/nav_history"
        android:name="lk.javainstitute.swiftex.user.history.UserHistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_user_history"/>
    <fragment
        android:id="@+id/nav_analytics"
        android:name="lk.javainstitute.swiftex.user.analytics.UserAnalyticsFragment"
        android:label="@string/menu_analytics"
        tools:layout="@layout/fragment_user_analytics"/>
    <fragment
        android:id="@+id/nav_company"
        android:name="lk.javainstitute.swiftex.user.company.UserCompanyFragment"
        android:label="@string/menu_company"
        tools:layout="@layout/fragment_user_company"/>
    <fragment
        android:id="@+id/nav_user_profile"
        android:name="lk.javainstitute.swiftex.user.profile.UserProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_user_profile"/>
</navigation>