<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_admin_home">

    <fragment
        android:id="@+id/nav_admin_home"
        android:name="lk.javainstitute.swiftex.admin.home.AdminHomeFragment"
        android:label="@string/menu_admin_home"
        tools:layout="@layout/fragment_admin_home"/>
    <fragment
        android:id="@+id/nav_admin_account_management"
        android:name="lk.javainstitute.swiftex.admin.account_management.AccountManagementFragment"
        android:label="@string/menu_admin_account_management"
        tools:layout="@layout/fragment_admin_account_management"/>
    <fragment
        android:id="@+id/nav_admin_driver_management"
        android:name="lk.javainstitute.swiftex.admin.driver_management.AdminDriverManagementFragment"
        android:label="@string/menu_admin_driver"
        tools:layout="@layout/fragment_admin_driver_management"/>
    <fragment
        android:id="@+id/nav_admin_security"
        android:name="lk.javainstitute.swiftex.admin.security.AdminSecurityFragment"
        android:label="@string/menu_admin_security"
        tools:layout="@layout/fragment_admin_security"/>
    <fragment
        android:id="@+id/nav_admin_profile"
        android:name="lk.javainstitute.swiftex.admin.profile.AdminProfileFragment"
        android:label="@string/menu_admin_profile"
        tools:layout="@layout/fragment_admin_profile"/>
</navigation>