<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/action_log_out"
        app:showAsAction="never"
        android:icon="@drawable/ic_logout"/>
    <item
        android:id="@+id/contact_support"
        android:orderInCategory="100"
        android:title="@string/menu_contact_admin"
        app:showAsAction="never"
        android:icon="@drawable/ic_call"/>
</menu>