<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentExistingUserConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover_blue"
    tools:context=".user.company.ExistingUserProfileFragment" >

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/nonexisting_user_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/lato"
        android:text="@string/nonexisting_staff_details"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_menu_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/marine"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:inputType="text"
        android:padding="12dp"
        android:text="@string/text1"
        android:textColor="@color/marine"
        android:textColorHint="@color/lighterblue"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/marine"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:inputType="text"
        android:padding="12dp"
        android:text="@string/courier_driver_lname"
        android:textColor="@color/marine"
        android:textColorHint="@color/lighterblue"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/marine"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:text="@string/text5"
        android:textColor="@color/marine"
        android:textColorHint="@color/lighterblue"
        app:layout_constraintEnd_toEndOf="@+id/editTextText4"
        app:layout_constraintStart_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/nonexisting_joineddatetime"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView34"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/nonexisting_datetime"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView31"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toTopOf="@+id/textView31" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/bluegreen"
        android:fontFamily="@font/lato"
        android:text="@string/nonexisting_add"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

</androidx.constraintlayout.widget.ConstraintLayout>