<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mapsActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/courier_img"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonAdminLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/scarlet"
        android:fontFamily="@font/lato"
        android:text="@string/main1text5"
        android:textSize="18sp"
        app:cornerRadius="11sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignUp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:fontFamily="@font/lato_regular"
        android:letterSpacing="0.04"
        android:text="@string/main1text1"
        android:textColor="@color/marine"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/main1text2"
        android:textColor="@color/marine"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextFname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/marine"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/text1"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/marine"
        android:textColorHint="@color/lighterblue"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextLname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/marine"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/text2"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/marine"
        android:textColorHint="@color/lighterblue"
        app:layout_constraintEnd_toEndOf="@+id/editTextFname"
        app:layout_constraintStart_toStartOf="@+id/editTextFname"
        app:layout_constraintTop_toBottomOf="@+id/editTextFname" />

    <EditText
        android:id="@+id/editTextMobile"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/marine"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/text3"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/marine"
        android:textColorHint="@color/lighterblue"
        app:layout_constraintEnd_toEndOf="@+id/editTextLname"
        app:layout_constraintStart_toStartOf="@+id/editTextLname"
        app:layout_constraintTop_toBottomOf="@+id/editTextLname" />

    <EditText
        android:id="@+id/editTextNic"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/marine"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/text4"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/marine"
        android:textColorHint="@color/lighterblue"
        app:layout_constraintEnd_toEndOf="@+id/editTextMobile"
        app:layout_constraintStart_toStartOf="@+id/editTextMobile"
        app:layout_constraintTop_toBottomOf="@+id/editTextMobile" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/marine"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/text5"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/marine"
        android:textColorHint="@color/lighterblue"
        app:layout_constraintEnd_toEndOf="@+id/editTextNic"
        app:layout_constraintStart_toStartOf="@+id/editTextNic"
        app:layout_constraintTop_toBottomOf="@+id/editTextNic" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/marine"
        android:fontFamily="@font/lato"
        android:outlineProvider="paddedBounds"
        android:text="@string/main1text2"
        android:textSize="18sp"
        app:cornerRadius="11dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/orange_premium"
        android:fontFamily="@font/lato"
        android:text="@string/main1text3"
        android:textSize="18sp"
        app:cornerRadius="11sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignUp"
        app:layout_constraintStart_toStartOf="@+id/buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="@font/lato"
        android:text="@string/main1text4"
        android:textAlignment="center"
        android:textColor="@color/orange_premium"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>